// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly prominence default 1`] = `
<DocumentFragment>
  .cache-19mde4y-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-19mde4y-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly prominence strong 1`] = `
<DocumentFragment>
  .cache-120w48j-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #151a2d;
  background: #f6f6f8;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-120w48j-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size large 1`] = `
<DocumentFragment>
  .cache-16kjit2-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 32px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-zriqgz-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 14px;
}

.cache-zriqgz-StyledText-variantStyles-colorStyles-StyledTypography.cache-zriqgz-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 14px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-16kjit2-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-zriqgz-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-19mde4y-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-19mde4y-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-1erbplu-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 8px;
  gap: 4px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 16px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 10px;
}

.cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography.cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 10px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1erbplu-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant danger 1`] = `
<DocumentFragment>
  .cache-fe1k7o-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #a6102d;
  background: #ffe1e7;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="danger"
    as="span"
    class="cache-fe1k7o-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-1y7w5ob-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #1a4dbf;
  background: #e1ebff;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="info"
    as="span"
    class="cache-1y7w5ob-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-19mde4y-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-19mde4y-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-1ul7gvf-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #390171;
  background: #eeeeff;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1ul7gvf-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-19imrtp-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #149a7b;
  background: #eafffb;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="success"
    as="span"
    class="cache-19imrtp-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-1xufqqv-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #cc4e18;
  background: #ffefe6;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="warning"
    as="span"
    class="cache-1xufqqv-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1isvwij-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1isvwij-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-19mde4y-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-19mde4y-StyledBox egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with icon 1`] = `
<DocumentFragment>
  .cache-19mde4y-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography.cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-19mde4y-StyledBox egvl2gp0"
    role="status"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <div
      class="egvl2gp1 e1g1zfwd0 cache-h37hb2-StyledText-variantStyles-colorStyles-StyledTypography"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;
